examples/yamlcombine/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    match:
      app: foo
---
  apiVersion: v1
  kind: Service
  metadata:
    name: my-other-service
  spec:
    ports:
      - name: https
        port: 443
    selector:
      match:
        app: bar
